add exchange and documentation
