# app/Http/Controllers/Auth/RegisterController.php
@@ -33,11 +33,15 @@ class RegisterController extends Controller
      * ),
      * @OA\Response(
      *    response=200,
-     *    description="Successfull registration",
+     *    description="Successfull register",
      *    @OA\JsonContent(
-     *       @OA\Property(property="user", type="object", ref="#/components/schemas/User"),
-     *       @OA\Property(property="access_token", type="string"),
+     *       @OA\Property(property="data", type="object",
+     *              @OA\Property(property="user", type="object", ref="#/components/schemas/User"),
+     *              @OA\Property(property="access_token", type="string", example="1|f9511jkjasdghylnb347ko"),
+     *       )
+     *       )
      *    )
+     *    ),
      * ),
      * @OA\Response(
      *    response=400,
