# app/Http/Controllers/Balance/BalanceController.php
@@ -8,6 +8,21 @@ use Illuminate\Http\Request;
 
 class BalanceController extends Controller
 {
+    /**
+     * @OA\Get(
+     * path="/balances",
+     * summary="Get balances",
+     * operationId="balancesGet",
+     * tags={"balance"},
+     * @OA\Response(
+     *    response=200,
+     *    description="Returns user's balances",
+     *    @OA\JsonContent(
+     *       @OA\Property(property="data", type="array", @OA\Items(ref="#/components/schemas/Balance"))
+     *    ),
+     * ),
+     * )
+     */
     public function index()
     {
         $balances = \Auth::user()->balances->load('currency');
