# app/Http/Resources/User/UserResource.php
@@ -6,18 +6,6 @@ use App\Http\Resources\Balance\BalanceResource;
 use App\Models\User;
 use Illuminate\Http\Resources\Json\JsonResource;
 
-/**
- *
- * @OA\Schema(
- * schema="User",
- * @OA\Xml(name="User"),
- * @OA\Property(property="id", type="integer", readOnly="true", example="1"),
- * @OA\Property(property="email", type="string", format="email", example="email@mail.com"),
- * @OA\Property(property="nickname", type="string", example="nickname"),
- * @OA\Property(property="first_name", type="string", maxLength=32, example="John"),
- * @OA\Property(property="last_name", type="string", maxLength=32, example="Doe"),
- * )
- */
 class UserResource extends JsonResource
 {
     /**
